6.2/api/Classes/classColorScheme.md
---
title: ColorScheme

---

# ColorScheme





## Public Classes

|                | Name           |
| -------------- | -------------- |
| struct | **[rgb](../Classes/structColorScheme_1_1rgb.md)**  |

## Public Functions

|                | Name           |
| -------------- | -------------- |
| | **[ColorScheme](../Classes/classColorScheme.md#function-colorscheme)**() |
| | **[~ColorScheme](../Classes/classColorScheme.md#function-~colorscheme)**() |

## Public Attributes

|                | Name           |
| -------------- | -------------- |
| [rgb](../Classes/structColorScheme_1_1rgb.md) | **[foreground](../Classes/classColorScheme.md#variable-foreground)**  |
| [rgb](../Classes/structColorScheme_1_1rgb.md) | **[background](../Classes/classColorScheme.md#variable-background)**  |
| [rgb](../Classes/structColorScheme_1_1rgb.md) | **[alt](../Classes/classColorScheme.md#variable-alt)**  |

## Public Functions Documentation

### function ColorScheme

```cpp
inline ColorScheme()
```


### function ~ColorScheme

```cpp
inline ~ColorScheme()
```


## Public Attributes Documentation

### variable foreground

```cpp
rgb foreground;
```


### variable background

```cpp
rgb background;
```


### variable alt

```cpp
rgb alt;
```


-------------------------------

Updated on 2022-03-29 at 21:30:18 -0600