6.3/api/Classes/classColorScheme.md
---
title: ColorScheme

---

# ColorScheme





## Public Classes

|                | Name           |
| -------------- | -------------- |
| struct | **[rgb](../Classes/structColorScheme_1_1rgb.md)**  |

## Public Functions

|                | Name           |
| -------------- | -------------- |
| QColor | **[background_qcolor](../Classes/classColorScheme.md#function-background-qcolor)**(int alpha) |
| QColor | **[foreground_qcolor](../Classes/classColorScheme.md#function-foreground-qcolor)**() |
| QColor | **[get_text_color](../Classes/classColorScheme.md#function-get-text-color)**() |
| double | **[get_text_intensity](../Classes/classColorScheme.md#function-get-text-intensity)**() |
| | **[ColorScheme](../Classes/classColorScheme.md#function-colorscheme)**() |
| | **[~ColorScheme](../Classes/classColorScheme.md#function-~colorscheme)**() |

## Public Attributes

|                | Name           |
| -------------- | -------------- |
| [rgb](../Classes/structColorScheme_1_1rgb.md) | **[foreground](../Classes/classColorScheme.md#variable-foreground)**  |
| [rgb](../Classes/structColorScheme_1_1rgb.md) | **[background](../Classes/classColorScheme.md#variable-background)**  |
| [rgb](../Classes/structColorScheme_1_1rgb.md) | **[alt](../Classes/classColorScheme.md#variable-alt)**  |

## Public Functions Documentation

### function background_qcolor

```cpp
inline QColor background_qcolor(
    int alpha
)
```


### function foreground_qcolor

```cpp
inline QColor foreground_qcolor()
```


### function get_text_color

```cpp
inline QColor get_text_color()
```


### function get_text_intensity

```cpp
inline double get_text_intensity()
```


### function ColorScheme

```cpp
inline ColorScheme()
```


### function ~ColorScheme

```cpp
inline ~ColorScheme()
```


## Public Attributes Documentation

### variable foreground

```cpp
rgb foreground;
```


### variable background

```cpp
rgb background;
```


### variable alt

```cpp
rgb alt;
```


-------------------------------

Updated on 2022-06-11 at 02:39:24 +0000